@@ -19,18 +19,69 @@
 package edu.cornell.med.icb.goby.alignments;
 
 import edu.cornell.med.icb.goby.util.FileExtensionHelper;
+import it.unimi.dsi.fastutil.ints.IntArrayList;
+import it.unimi.dsi.fastutil.ints.IntList;
+import it.unimi.dsi.fastutil.ints.IntOpenHashSet;
+import it.unimi.dsi.fastutil.ints.IntSet;
+import junit.framework.Assert;
 import org.apache.commons.lang.ArrayUtils;
 import org.apache.commons.lang.RandomStringUtils;
-import static org.junit.Assert.assertArrayEquals;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+
+import static junitx.framework.Assert.assertNotEquals;
+import static org.junit.Assert.*;
+
 import org.junit.Test;
+
+import java.io.IOException;
 
 /**
  * Basic tests for the {@link AlignmentReaderImpl}.
  */
 public class TestAlignmentReader {
+    String basename = "test-data/bam/Example.entries";
+
+    @Test
+    public void testWithSlice() throws IOException {
+        long end;
+        long start;
+
+        final AlignmentReaderImpl readerFromStart = new AlignmentReaderImpl(0L, 1L, basename);
+        assertTrue(readerFromStart.hasNext());
+        final Alignments.AlignmentEntry firstEntry = readerFromStart.next();
+        final AlignmentReaderImpl readerAt10K = new AlignmentReaderImpl(146387L, 146387L + 1, basename);
+        assertTrue(readerAt10K.hasNext());
+        final Alignments.AlignmentEntry firstEntry10KSlice = readerAt10K.next();
+
+        assertNotEquals(firstEntry10KSlice, firstEntry);
+    }
+
+    @Test
+    public void anotherTest() throws IOException {
+        final AlignmentReaderImpl readerFromStart = new AlignmentReaderImpl(0L, 1L, basename);
+        assertTrue(readerFromStart.hasNext());
+        final Alignments.AlignmentEntry firstEntry = readerFromStart.next();
+        readerFromStart.close();
+
+        final IntSet entrySet0 = new IntOpenHashSet();
+        String basename = "test-data/bam/Example.entries";
+        IterateAlignments it = new IterateAlignments() {
+            @Override
+            public void processAlignmentEntry(AlignmentReader alignmentReader, Alignments.AlignmentEntry alignmentEntry) {
+                if (entrySet0.isEmpty()) {
+                    System.out.println(alignmentEntry);
+                    entrySet0.add(alignmentEntry.getQueryIndex());
+                }
+            }
+        };
+        //    it.iterate(0L, 1L, basename);
+        //   System.out.println("----------------");
+        it.iterate(146387L, 146387L + 1, basename);
+        assertTrue(!entrySet0.isEmpty());
+
+        assertNotEquals("query indices of first entry must differ", entrySet0.iterator().nextInt(), firstEntry.getQueryIndex());
+
+    }
+
     /**
      * Validate that the method
      * {@link AlignmentReaderImpl#getBasename(String)}
@@ -68,19 +119,19 @@ public class TestAlignmentReader {
         assertTrue("Basename array should be empty",
                 ArrayUtils.isEmpty(AlignmentReaderImpl.getBasenames()));
 
-        final String[] nullArray = { null };
+        final String[] nullArray = {null};
         assertArrayEquals("Basename array should contain a single null element",
                 nullArray, AlignmentReaderImpl.getBasenames((String) null));
 
-        final String[] emptyStringArray = { "" };
+        final String[] emptyStringArray = {""};
         assertArrayEquals("Basename array should contain a single empty string element",
                 emptyStringArray, AlignmentReaderImpl.getBasenames(""));
 
-        final String[] foobarArray = { "foobar" };
+        final String[] foobarArray = {"foobar"};
         assertArrayEquals("Basenames should be unchanged",
                 foobarArray, AlignmentReaderImpl.getBasenames("foobar"));
 
-        final String[] foobarTxtArray = { "foobar.txt" };
+        final String[] foobarTxtArray = {"foobar.txt"};
         assertArrayEquals("Basenames should be unchanged",
                 foobarTxtArray, AlignmentReaderImpl.getBasenames("foobar.txt"));
 
@@ -89,7 +140,7 @@ public class TestAlignmentReader {
                 AlignmentReaderImpl.getBasenames("foobar", "foobar.txt"));
 
         final String basename = "mybasename";
-        final String[] basenameArray = { basename };
+        final String[] basenameArray = {basename};
         final String[] filenames =
                 new String[FileExtensionHelper.COMPACT_ALIGNMENT_FILE_EXTS.length];
         for (int i = 0; i < FileExtensionHelper.COMPACT_ALIGNMENT_FILE_EXTS.length; i++) {
